# python-microservices

./: .gitignore  Dockerfile  pyproject.toml  readme.md
docs/: readme.md
docs/day.1/: 10-hello.world.md  15-running.app.md  20-scraping.the.data.md  20-service.homepage.md  23-scraping.the.data.md  25-url.scheme.md  30-pokemon.model.md  30-scraping.the.data.periodicaly.md  35-pydantic.model.md  40-sqlmodel.md  45-sqladmin.md
docs/day.2/: 10-logging.md  10-the.model.md  15-list.of.pokemons.md  20-pokemon.detail.md  20-the.model.md  25-pager.md  30-pydantic.model.md  50-litecli.md  50-settings.md  60-sqladmin.md  70-all.measurements.md  80-get.last.measurement.md
docs/day.3/: 20-list.of.measurements.md  30-settings.md  40-project.refactoring.md  50-dependency.injection.md  60-pagination.md  70-rest.api.md
docs/day.4/: 10-measurement.detail.md  20-error.handling.md  30-output.model.md  40-filtering.measurements.md  50-jinja.templates.md  50-jinja.templates.md.py  60-healthcheck.md
docs/day.5/: 20-jinja.filters.md  30-health.check.api.intro.md  30-healthcheck.md  40-health.check.in.fastapi.md  50-packaging.md  60-docker.image.md
docs/tmp/: 20-list.of.pokemons.md  23-query.parameters.md  30-pokemon.detail.md  35-pydantic.model.md  36-validators.md  40-project.refactoring.md  60-dependency.injection.md
pokedex/: dependencies.py  main.py  middleware.py
pokedex/api/: healthcheck.py  pokemons.py
pokedex/models/: pokemon.py  settings.py
pokedex/templates/: pokemon-list.tpl.html
pokedex/views/: homepage.py  pokemon_detail.py  pokemon_list.py
resources/: pokedex.lite.sqlite  pokedex.sqlite  readme.md
weather/: cron.py  dependencies.py  j2_filters.py  main.py  models.py
weather/api/: healthcheck.py  measurements.py  pokemons.py  weather.py
weather/models/: measurement.py  pager.py  problemdetails.py  settings.py
weather/templates/: base.tpl.html  current.weather.html  hello.html  navigation.tpl.html  pokemon-list.tpl.html  searchbar.tpl.html
(+4 files in other folders)
