[tool.poetry]
name = "weather"
version = "0.1.0"
description = "The weather microservice."
authors = ["Miroslav Biňas <miroslav.binas@tuke.sk>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[tool.poetry.scripts]
#pokedex="weather.main:main"  # python -m weather.main

