[tool.poetry]
name = "weather"
version = "0.1.0"
description = "The weather microservice."
authors = ["Miroslav Biňas <miroslav.binas@tuke.sk>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
httpx = "^0.26.0"
fastapi-restful = "^0.5.0"
typing-inspect = "^0.9.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.20.0"
httpie = "^3.2.2"
rich = "^13.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[tool.poetry.scripts]
#pokedex="weather.main:main"  # python -m weather.main

